2008-09-30  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-main-win.cc:
	GnomeCmdData: more C++ rework

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-selector.cc:
	GnomeCmdFileList::show_dir_size() -> GnomeCmdFileList::show_dir_tree_size()

2008-09-29  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-notebook.h:
	notebook: added missing prev_page() and next_page()

	* src/gnome-cmd-file-list.cc:
	Simplify and speedup GnomeCmdFileList::file_is_wanted()

	* configure.in:
	* src/eggcellrendererkeys.cc:
	* src/eggcellrendererkeys.h:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Replace HAVE_GTK_2_10 with GTK_CHECK_VERSION(2,10,0)

2008-09-27  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-delete-dialog.cc:
	Iterate through the file list MUCH faster (O(n*n) -> O(n))

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-quicksearch-popup.cc:
	Move get_file_at_row() and get_row_from_file() to GnomeCmdFileList

	* configure.in:
	* data/gnome-commander.ebuild.in:
	Use version requirements for ebuild from configure.in

2008-09-26  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con-device.cc:
	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-con-home.cc:
	* src/gnome-cmd-con-smb.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-options-dialog.cc:
	* src/imageloader.cc:
	GnomeCmdData: more C++ rework

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-props-dialog.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-mkdir-dialog.cc:
	* src/gnome-cmd-rename-dialog.cc:
	* src/gnome-cmd-search-dialog.cc:
	gnome_cmd_file_list_focus_file() -> GnomeCmdFileList::focus_file()

2008-09-25  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h: