@@ -11,6 +11,11 @@
 	* src/gnome-cmd-file-selector.cc:
 	GnomeCmdFileList::show_dir_size() -> GnomeCmdFileList::show_dir_tree_size()
 
+	* src/gnome-cmd-file-list.cc:
+	* src/gnome-cmd-file-list.h:
+	* src/gnome-cmd-file-selector.cc:
+	GnomeCmdFileList::insert_file() and GnomeCmdFileList::remove_file() return success/failure now
+
 2008-09-29  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-notebook.h:
